--- a/backend/playlist-backend/templates/playlist.html
+++ b/backend/playlist-backend/templates/playlist.html
@@ -10,12 +10,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'ang/styles.css' %}"></head>
+<link rel="stylesheet" href="{% static 'angular/styles.css' %}"></head>
 <body>
     <app-root></app-root>
     <!-- these will be built by the angular app in frontend -->
-	<script type="text/javascript" src="{% static 'ang/runtime.js' %}"></script>
-	<script type="text/javascript" src="{% static 'ang/polyfills.js' %}"></script>
-	<script type="text/javascript" src="{% static 'ang/main.js' %}"></script>
+	<script type="text/javascript" src="{% static 'angular/runtime.js' %}"></script>
+	<script type="text/javascript" src="{% static 'angular/polyfills.js' %}"></script>
+	<script type="text/javascript" src="{% static 'angular/main.js' %}"></script>
 </body>
 </html>
