--- a/backend/playlist-backend/templates/playlist.html
+++ b/backend/playlist-backend/templates/playlist.html
@@ -8,7 +8,7 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="{% static 'angular/favicon.ico' %}">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="{% static 'angular/styles.css' %}"></head>
 <body>
