Update setup guide

--- a/backend/playlist-backend/templates/playlist.html
+++ b/backend/playlist-backend/templates/playlist.html
@@ -13,7 +13,7 @@
 <link rel="stylesheet" href="{% static 'angular/styles.css' %}"></head>
 <body>
     <app-root></app-root>
-    <!-- these will be built by the angular app in frontend -->
+    <!-- these will be built by the angular app in frontend/playlist-frontend -->
 	<script type="text/javascript" src="{% static 'angular/runtime.js' %}"></script>
 	<script type="text/javascript" src="{% static 'angular/polyfills.js' %}"></script>
 	<script type="text/javascript" src="{% static 'angular/main.js' %}"></script>
