--- a/backend/playlist-backend/templates/playlist.html
+++ b/backend/playlist-backend/templates/playlist.html
@@ -9,11 +9,13 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="{% static 'angular/favicon.ico' %}">
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="{% static 'angular/styles.css' %}"></head>
-<body>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'angular/styles.css' %}"></head>
+<body class="mat-app-background">
     <app-root></app-root>
-    <!-- these will be built by the angular app in frontend/playlist-frontend -->
+  <!-- these will be built by the angular app in frontend/playlist-frontend -->
 	<script type="text/javascript" src="{% static 'angular/runtime.js' %}"></script>
 	<script type="text/javascript" src="{% static 'angular/polyfills.js' %}"></script>
 	<script type="text/javascript" src="{% static 'angular/main.js' %}"></script>
