--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -7,9 +7,14 @@
         <div
             class="airdate"
             *ngIf="play.playtype.playtypeid === 1">
-            <span class="kexp-orange">
-                {{play.airdate | date:'shortTime'}}
-            </span>
+            <mat-chip-list selectable="false" class="tag-chip">
+                <mat-chip
+                selectable="false"
+                disableRipple="true"
+                >
+                    {{play.airdate | date:'shortTime'}}
+                </mat-chip>
+            </mat-chip-list>
         </div>
         <mat-card class="card-container"
             *ngIf="play.playtype.playtypeid === 1">
@@ -23,10 +28,21 @@
                 <mat-card-subtitle>
                     <span class="kexp-orange">{{play.artist.name}}</span>
                 </mat-card-subtitle>
+                <mat-card-subtitle *ngIf="play.artist.islocal">
+                    <mat-chip-list class="tag-chip">
+                        <mat-chip
+                        color="accent"
+                        selected="true"
+                        disableRipple="true"
+                        >
+                        Local Artist
+                        </mat-chip>
+                    </mat-chip-list>
+                </mat-card-subtitle>
             </mat-card-header>
         </mat-card>
         <div class="air-break" *ngIf="play.playtype.playtypeid === 4">
-            <span class="kexp-orange">Air Break</span>
+            <span>Air Break</span>
         </div>
     </div>
 </div>
