--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -31,6 +31,7 @@
                 <mat-card-subtitle *ngIf="play.artist.islocal">
                     <mat-chip-list class="tag-chip">
                         <mat-chip
+                        class="local-chip"
                         color="accent"
                         selected="true"
                         disableRipple="true"
