Adjust layout for comment form

--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -41,6 +41,12 @@
                     </mat-chip-list>
                 </mat-card-subtitle>
             </mat-card-header>
+            <mat-card-content>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repellendus corrupti incidunt eos delectus qui. Temporibus deleniti
+                nostrum iure quidem, iste excepturi ea doloribus assumenda dignissimos
+                tempora! Porro doloribus rerum dolores.
+            </mat-card-content>
         </mat-card>
         <div class="air-break" *ngIf="play.playtype.playtypeid === 4">
             <span>Air Break</span>
