--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.scss
@@ -14,14 +14,12 @@
 }
 
 .card-container {
-    margin-left: 16px;
     display: flex;
     flex-direction: row;
     flex-grow: 1;
 
     .mat-card-header {
-        flex: 0 1 30%;
-        margin-left: 24px;
+        flex: 1 1 80%;
     }
 }
 
@@ -29,7 +27,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-
+    width: 90px; // ensure the chip has enough space to fill
+    margin-right: 16px;
+    flex-shrink: 0;
 }
 
 .playlist-item {
@@ -41,6 +41,10 @@
 .play-title-section {
     display: flex;
     flex-direction: row;
+}
+
+.comment-form-section {
+    margin-left: 16px;
 }
 
 .air-break {
