Show save button only when valid

--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -49,6 +49,7 @@
                     </textarea>
                 </mat-form-field>
                 <button
+                    *ngIf="commentForm.valid"
                     mat-raised-button
                     (click)="onCommentSave()"
                     [disabled]="!commentForm.valid"
