--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -35,6 +35,11 @@
     .full-width-comment {
         width: 100%;
     }
+
+    .form-buttons {
+        display: flex;
+        justify-content: flex-end;
+    }
 }
 
 .air-break {
