--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -37,7 +37,11 @@
         </mat-card-header>
         <mat-card-content class="comment-form-section">
             <form [formGroup]="commentForm">
-                <mat-form-field class="full-width-comment"
+                <div *ngIf="play.comment" class="existing-comment">
+                    {{play.comment.comment_text}}
+                </div>
+                <mat-form-field *ngIf="!play.comment"
+                    class="full-width-comment"
                     floatLabel="always">
                     <mat-label>DJ Comment</mat-label>
                     <textarea
