Make textarea orange

--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -47,6 +47,7 @@
                 <mat-form-field *ngIf="!play.comment"
                     class="full-width-comment"
                     hideRequiredMarker="true"
+                    color="accent"
                     appearance="outline"
                     floatLabel="always">
                     <mat-label>DJ Comment</mat-label>
