--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -36,6 +36,16 @@
         width: 100%;
     }
 
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+
+        .flex-spacer {
+            flex: 1;
+        }
+    }
+
     .form-buttons {
         display: flex;
         justify-content: flex-end;
