--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -54,6 +54,7 @@
                     <textarea
                         type="text"
                         rows="5"
+                        placeholder="Add a comment to this play"
                         formControlName="commentText"
                         matInput
                         required>
@@ -63,6 +64,12 @@
                 </mat-form-field>
                 <div class="flex-spacer"></div>
                 <div class="form-buttons">
+                    <button *ngIf="commentEditorVisible && commentForm.dirty"
+                        mat-raised-button
+                        (click)="cancelCommentEdit()"
+                        color="warn">
+                        Cancel
+                    </button>
                     <button *ngIf="commentEditorVisible && commentForm.valid"
                         mat-raised-button
                         (click)="onCommentSave()"
