--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -49,6 +49,10 @@
     .form-buttons {
         display: flex;
         justify-content: flex-end;
+
+        button {
+            margin-right: 8px;
+        }
     }
 }
 
