--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -107,6 +107,11 @@
         margin: 0 auto;
         font-weight: 400;
     }
+
+    img.found-art {
+        width: 100%;
+        height: 100%;
+    }
 }
 
 // chips
