--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -23,9 +23,11 @@
     margin-bottom: 20px;
 }
 
-.play-title-section {
-    display: flex;
-    flex-direction: row;
+.play-info-section {
+
+    .release-name {
+        font-style: italic;
+    }
 }
 
 .comment-form-section {
