--- a/frontend/playlist-frontend/src/app/playlist/playlist.component.html
+++ b/frontend/playlist-frontend/src/app/playlist/playlist.component.html
@@ -1,5 +1,23 @@
 <div class="header-section">
-    <h1 class="mat-h1">Playlist</h1>
+    <div class="header-content">
+        <h1 class="mat-h1">Playlist</h1>
+        <div class="flex-spacer"></div>
+        <h3 class="mat-h3 on-air" *ngIf="currentShow">
+            <span class="kexp-orange">
+                On Air Now
+            </span>
+        </h3>
+        <img class="mat-card-avatar host-avatar" *ngIf="currentShow"
+            [src]="currentShow.hosts[0].newimageuri">
+        <div class="show-info-container" *ngIf="currentShow">
+            <span class="mat-h4 show-name">
+                {{currentShow.program.name}}
+            </span>
+            <span class="mat-caption host-name" *ngFor="let host of currentShow.hosts">
+                {{host.name}}
+            </span>
+        </div>
+    </div>
     <mat-divider></mat-divider>
 </div>
 <div class="card-list-container mat-typography">
