--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.html
@@ -40,7 +40,7 @@
                 {{play.release ? play.release.name : 'Unknown Album'}}
             </mat-card-subtitle>
             <mat-card-subtitle>
-                {{play.releaseevent ? play.releaseevent.year + ' - ' : ''}}
+                {{(play.releaseevent && play.releaseevent.year) ? play.releaseevent.year + ' - ' : ''}}
                 {{(play.label ? play.label.name : 'Unknown Label') | uppercase}}
             </mat-card-subtitle>
         </mat-card-header>
