--- a/frontend/playlist-frontend/src/app/app.component.scss
+++ b/frontend/playlist-frontend/src/app/app.component.scss
@@ -15,6 +15,10 @@ app-navbar {
         margin-bottom: 16px;
     }
 
+    .search-form {
+        width: 100%
+    }
+
     .button {
         margin-bottom: 16px;
     }
