--- a/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
+++ b/frontend/playlist-frontend/src/app/playlist-item/playlist-item.component.scss
@@ -39,6 +39,11 @@
         .comment-text {
             text-indent: 25px;
             line-height: 1.5;
+
+            a {
+                color: inherit;
+                text-decoration: none;
+            }
         }
     }
 
