--- a/frontend/playlist-frontend/src/app/navbar/navbar.component.html
+++ b/frontend/playlist-frontend/src/app/navbar/navbar.component.html
@@ -7,6 +7,7 @@
         alt="KEXP Logo">
       <span>KEXP Playlist</span>
     </a>
+    <p class="kexp-orange mat-caption">Please note: This app is a tech demo, and not a part of the official KEXP website</p>
     <div class="flex-spacer"></div>
     <div *ngIf="currentAuthor" class="author-select">
       <button mat-button (click)="toggleSidenav()" class="mat-caption">
